# ups-and-downs

./: .eslintignore  .eslintrc.cjs  .gitconfig  .gitignore  .prettierignore  .prettierrc  .stylelintrc.json  .taplo.toml  CHANGELOG.md  LICENSE  README.md  cog.toml  justfile  package.json  playwright.config.ts  tsconfig.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
.github/workflows/: conventional-commits.yml  deploy.yml  lints-and-tests.yml  playwright.yml  publish.yml  release.yml  tauri.yml
src/: App.svelte  bindings.ts  main.ts  store.ts  styles.css  types.ts
src-tauri/: CHANGELOG.md  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.sqlx/: query-2ae6a2e4b05d43cfba5908f37236ac4bb4e6952010729a181f3501c37dbba429.json  query-305f1e458c0ffa4cb1d167c085ec0beb947d3f2be5bc8898f0aa98a95d12c24f.json  query-32a38839f74743cc70bc2671573c05ede2fb7100f4a3aa8d38d4603bdb417b9b.json  query-3a406c25d10e7a0463fe1c246fed880cd07d2d65a698a4e65d3f2ff50005d13a.json  query-6833ad907b6f8bf6556c56898a3c83b7d4732e42cf33380055a12f443d2fd34b.json  query-93ab3c90dad899257057bd3e5bc6ec75bd0f2647c9516e1d16d240bdf5e3cc38.json  query-c062f176f1f27e264652dc128cac372a4f718c4b248922e091ee8eb1553d20aa.json  query-dcc0ab7ea9afff9cd56973cfab13d89aedbd51b137b8ba377992a4debb30daf2.json  query-e31279511fb6c40c1e2f4b2eb466a8b74a5582c6d839d5e07ea74facfaa29954.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240304180324_create-highlights.down.sql  20240304180324_create-highlights.up.sql  20240331081452_fix-content-check.down.sql  20240331081452_fix-content-check.up.sql
src-tauri/src/: db.rs  highlight.rs  main.rs
src/__tests__/: App.test.ts
src/lib/: Greet.svelte
src/lib/components/: JumpToTopButton.svelte  RandomEmoji.svelte  Spinner.svelte  Tooltip.svelte  ViewHeader.svelte
src/lib/constants/: emojis.ts
src/lib/css/: fonts.css  styles.css
src/lib/layouts/: ViewHeader.svelte  ViewMain.svelte
src/lib/utils/: color.ts  date.ts
src/view/: List.svelte  Menu.svelte  Record.svelte
