[package]
name = "ups-and-downs"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = { version = "=2.0.0-rc.7", features = ["functions", "export", "time"] }
sqlx = { version = "0.7.3", features = [
	"macros",
	"migrate",
	"runtime-tokio",
	"sqlite",
	"time",
] }
strum = { version = "0.26.2", features = ["derive"] }
tap = "1.0.1"
tauri = { version = "1.6", features = [
	"dialog-confirm",
	"shell-open",
	"process-exit",
	"tracing",
	"dialog",
] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-specta = { version = "=2.0.0-rc.4", features = ["typescript"] }
time = { version = "0.3.29", features = ["serde"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tauri = { version = "1.6", features = ["test"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev.package.sqlx-macros]
opt-level = 3

[lints.rust]
unsafe_code = "forbid"
keyword_idents = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
unused_import_braces = "warn"

[lints.clippy]
cognitive_complexity = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_link_with_quotes = "warn"
doc_markdown = "warn"
empty_line_after_outer_attr = "warn"
empty_structs_with_brackets = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
float_equality_without_abs = "warn"
missing_const_for_fn = "warn"
mod_module_files = "warn"
option_if_let_else = "warn"
print_stderr = "warn"
print_stdout = "warn"
semicolon_if_nothing_returned = "warn"
unseparated_literal_suffix = "warn"
shadow_unrelated = "warn"
similar_names = "warn"
suspicious_operation_groupings = "warn"
unused_self = "warn"
use_debug = "warn"
used_underscore_binding = "warn"
useless_let_if_seq = "warn"
wildcard_dependencies = "warn"
wildcard_imports = "warn"
